<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    android:orientation="vertical"
    tools:context=".view.DashboardActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:src="@drawable/background_img" />

    <TextView
        android:id="@+id/header_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_background"
        android:fontFamily="@font/roboto_bold"
        android:padding="16dp"
        android:text="@string/android_assignment"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header_title"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/overall_score_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/overall_score"
                android:textAllCaps="true"
                android:textColor="#757575"
                android:textSize="12sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:strokeWidth="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_toStartOf="@id/progress_score"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/overall_score_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_bold"
                                android:text="@string/overall_score"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/average_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_bold"
                                android:text="@string/average"
                                android:textColor="@color/yellow_color"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <ProgressBar
                            android:id="@+id/progress_score"
                            style="@android:style/Widget.ProgressBar.Horizontal"
                            android:layout_width="96dp"
                            android:layout_height="96dp"
                            android:layout_alignParentEnd="true"
                            android:layout_gravity="center"
                            android:max="100"
                            android:progressDrawable="@drawable/circular_progress" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="34dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/overall_score_progress"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="-5dp"
                                android:fontFamily="@font/inter_bold"
                                android:textColor="@color/yellow_color"
                                android:textSize="22sp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_semi_bold"
                                android:text="@string/_100"
                                android:textSize="12sp" />

                        </LinearLayout>

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/volume_background"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:padding="14dp"
                        android:weightSum="10">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="7"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/search_volume"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_semi_bold"
                                android:text="@string/search_volume"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/volume_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_bold"
                                android:text="@string/high"
                                android:textColor="@color/green_text_color"
                                android:textSize="12sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/competition"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_semi_bold"
                                android:text="@string/competition"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/competition_label"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/inter_bold"
                                android:text="@string/high"
                                android:textColor="@color/label_text_color"
                                android:textSize="12sp" />

                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/title_text"
                android:textAllCaps="true"
                android:textColor="#757575"
                android:textSize="12sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:strokeWidth="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white">

                    <TextView
                        android:id="@+id/title_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_semi_bold"
                        android:padding="16dp"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title_text_view"
                        android:background="@color/button_background"
                        android:orientation="horizontal"
                        android:weightSum="10.1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:fontFamily="@font/inter_bold"
                            android:padding="16dp"
                            android:text="@string/copy"
                            android:textAlignment="center"
                            android:textColor="@color/blue_text_color"
                            android:textSize="16sp" />

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:paddingVertical="5dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/divider_line" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:fontFamily="@font/inter_bold"
                            android:padding="15dp"
                            android:text="@string/share"
                            android:textAlignment="center"
                            android:textColor="@color/blue_text_color"
                            android:textSize="16sp" />

                    </LinearLayout>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/description"
                android:textAllCaps="true"
                android:textColor="#757575"
                android:textSize="12sp" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:strokeWidth="0dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white">

                    <TextView
                        android:id="@+id/description_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter_semi_bold"
                        android:padding="16dp"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/description_text_view"
                        android:background="@color/button_background"
                        android:orientation="horizontal"
                        android:weightSum="10.1">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:fontFamily="@font/inter_bold"
                            android:padding="16dp"
                            android:text="@string/copy"
                            android:textAlignment="center"
                            android:textColor="@color/blue_text_color"
                            android:textSize="16sp" />

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_weight="0.1"
                            android:paddingVertical="5dp"
                            android:scaleType="centerInside"
                            android:src="@drawable/divider_line" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:fontFamily="@font/inter_bold"
                            android:padding="15dp"
                            android:text="@string/share"
                            android:textAlignment="center"
                            android:textColor="@color/blue_text_color"
                            android:textSize="16sp" />

                    </LinearLayout>

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/default_error"
        android:visibility="gone" />

</RelativeLayout>